--- a/test.html
+++ b/test.html
@@ -1,2 +1,2 @@
 <h1>My first website</h1>
-<p>My Favorite person is <span style="color:red;>red></span> my sons</p>
+<p>My Favorite colour is <span style="color:red;">red</span</p>
